# kh509_miniproject8

./: Cargo.toml  Makefile  README.md  polars_stat.py  requirements.txt  test_main.py
.devcontainer/: devcontainer.json
.github/workflows/: cicd.yml
src/: main.rs  polars_stat.rs
