[package]
name = "calc-cli-with-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = { version = "4.4", features = ["derive"] }
lazy_static = "1.4.0"
structopt = "0.3.25"
polars = "0.33.2"
[lib]
name = "iris_functions"
path = "src/polars_stat.rs"