[package]
name = "calc-cli-with-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = { version = "4.4", features = ["derive"] }
lazy_static = "1.4.0"
structopt = "0.3.25"
polars = "0.33.2"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2.101"
csv = "1.1"
plotters = "0.3"
[lib]
name = "iris_functions"
path = "src/main.rs"